--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
 body {
 
     margin: 0;
-    width: 100%;
+    
     height: 100vh;
-
+color: var(--main-text-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,6 +36,15 @@ body {
     /* background-color: red; */
 }
 
+.form_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 0;
+    padding: 1rem 2rem;
+}
+
 .text {
     display: flex;
     flex-direction: column;
@@ -51,13 +60,26 @@ h1 {
     font-weight: 900;
     font-size: 4rem;
 }
+h2{
+    margin: 0;
+    padding: 0;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+h3{
+    margin: 0;
+    padding: 0;
+}
+#top_h3{
+    margin-top: 2rem;
+}
 
 
-
-button {
-    /* margin-top: -20rem; */
-    /* margin-bottom: 11rem; */
-    margin-top: 5rem;
+.button {
+   
+    margin-bottom: 2rem;
+    /* margin-top: 5rem; */
     width: 15rem;
     height: 5rem;
     font-size: 1.5rem;
@@ -65,6 +87,14 @@ button {
     background-color: var(--main-bg-color);
     border: 0.4rem solid var(--main-text-color);
     border-radius: 1rem;
+
+    /*com*/
+
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 
@@ -73,11 +103,43 @@ button {
     flex-direction: column;
 }
 
-#anrede {
-    width: 10rem;
+.inputGroup label{
+    font-weight: bold;
+}
+
+.inputGroup select,input {
+    width: 17rem;
+    height: 2rem;
     background-color: var(--input-field-color);
     color: var(--main-text-color);
     border-radius: 0.2rem;
+    text-decoration: none;
+    border-style: none;
+}
+
+
+.inputGroup-AGB{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 1rem;
+    margin-left: 0;
+}
+.inputGroup-AGB input{
+    width: 2rem;
+    margin-left: 0;
+    margin-right: 0.5rem;
+    border-radius: 1rem;
+    /* text-decoration: none;
+    border-style: none; */
+   
+}
+input[type="checkbox"] {
+    box-sizing: border-box;
+  padding: 0;
+  accent-color: var(--main-bg-color);
+  border-radius: 1rem;
+    
 }
 
 
@@ -85,4 +147,26 @@ form {
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
+}
+
+a{
+    text-decoration: none;
+    color: var(--main-text-color);
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+
+.button_form{
+   margin-top: 2rem;
+    width: 15rem;
+    height: 5rem;
+    font-size: 1.5rem;
+    font-weight: 900;
+    background-color: var(--main-bg-color);
+    border: 0.4rem solid var(--main-text-color);
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
