mobile first beta version

--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ color: var(--main-text-color);
     justify-content: space-between;
     padding: 2rem;
     gap: 7rem;
-    /* background-color: red; */
+   
+    
 }
 
 .form_container{
@@ -43,6 +44,8 @@ color: var(--main-text-color);
     justify-content: space-between;
     margin-top: 0;
     padding: 1rem 2rem;
+   
+
 }
 
 .text {
@@ -59,6 +62,10 @@ h1 {
     color: var(--main-text-color);
     font-weight: 900;
     font-size: 4rem;
+}
+
+.main_h2{
+    font-size: 1.5rem;
 }
 h2{
     margin: 0;
@@ -101,13 +108,16 @@ h3{
 .inputGroup {
     display: flex;
     flex-direction: column;
+    
 }
 
 .inputGroup label{
     font-weight: bold;
+    
 }
 
 .inputGroup select,input {
+   
     width: 17rem;
     height: 2rem;
     background-color: var(--input-field-color);
@@ -124,22 +134,17 @@ h3{
     align-items: center;
     margin-top: 1rem;
     margin-left: 0;
+    width: 17rem;
 }
 .inputGroup-AGB input{
-    width: 2rem;
+   width: 3em;
+   
     margin-left: 0;
     margin-right: 0.5rem;
     border-radius: 1rem;
+    accent-color: var(--main-bg-color);
     /* text-decoration: none;
-    border-style: none; */
-   
-}
-input[type="checkbox"] {
-    box-sizing: border-box;
-  padding: 0;
-  accent-color: var(--main-bg-color);
-  border-radius: 1rem;
-    
+    border-style: none; */ 
 }
 
 
@@ -147,6 +152,7 @@ form {
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
+
 }
 
 a{
@@ -169,4 +175,21 @@ a{
     justify-content: center;
     align-items: center;
     
+}
+
+
+#submit_input{
+    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 15rem;
+    height: 5rem;
+    font-size: 1.5rem;
+    font-weight: 900;
+    background-color: var(--main-bg-color);
+    border: 0.4rem solid var(--main-text-color);
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
