--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ color: var(--main-text-color);
     justify-content: space-between;
     margin-top: 0;
     padding: 1rem 2rem;
+
+    /* test responsive */
+    max-width: 900px;
    
 
 }
@@ -108,6 +111,9 @@ h3{
 .inputGroup {
     display: flex;
     flex-direction: column;
+
+    /* test responsive */
+    width: 100%;
     
 }
 
@@ -117,9 +123,13 @@ h3{
 }
 
 .inputGroup select,input {
+
+    /* test responsive */
+    width: 100%;
+    height: 15%;
    
-    width: 17rem;
-    height: 2rem;
+    /* width: 17rem;
+    height: 2rem; */
     background-color: var(--input-field-color);
     color: var(--main-text-color);
     border-radius: 0.2rem;
@@ -152,6 +162,9 @@ form {
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
+
+    /* test responsive */
+    /* min-width: 100%; */
 
 }
 
