--- a/style.css
+++ b/style.css
@@ -29,24 +29,27 @@ color: var(--main-text-color);
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-between;
     padding: 2rem;
     gap: 7rem;
-   
+    width: 100%;
+    /* test responsive */
+    max-width: 600px;
     
 }
+
 
 .form_container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-between;
     margin-top: 0;
     padding: 1rem 2rem;
-
+    width: 100%;
     /* test responsive */
-    max-width: 900px;
+    max-width: 600px;
    
 
 }
@@ -68,7 +71,7 @@ h1 {
 }
 
 .main_h2{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 h2{
     margin: 0;
@@ -85,11 +88,24 @@ h3{
     margin-top: 2rem;
 }
 
+#welcome_vorname{
+    font-size: 2.1rem;
+    font-weight: 900;
+}
+
+#welcome_nachname{
+    font-size: 2.1rem;
+    font-weight: 900;
+}
+
+
 
 .button {
    
     margin-bottom: 2rem;
     /* margin-top: 5rem; */
+    margin-left: auto;
+    margin-right: auto;
     width: 15rem;
     height: 5rem;
     font-size: 1.5rem;
@@ -108,7 +124,7 @@ h3{
 }
 
 
-.inputGroup {
+.inputGroup:not(#agb) {
     display: flex;
     flex-direction: column;
 
@@ -126,7 +142,7 @@ h3{
 
     /* test responsive */
     width: 100%;
-    height: 15%;
+    height: 2rem;
    
     /* width: 17rem;
     height: 2rem; */
@@ -144,11 +160,13 @@ h3{
     align-items: center;
     margin-top: 1rem;
     margin-left: 0;
-    width: 17rem;
+    min-width: 17rem;
+    width: 100%;
 }
 .inputGroup-AGB input{
-   width: 3em;
-   
+  
+   width: 2rem;
+   height:2rem ;
     margin-left: 0;
     margin-right: 0.5rem;
     border-radius: 1rem;
@@ -164,7 +182,7 @@ form {
     gap: 0.2rem;
 
     /* test responsive */
-    /* min-width: 100%; */
+    width: 100%;
 
 }
 
@@ -205,4 +223,27 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+
+@media only screen and (min-width: 600px) {
+    .main_h2
+{
+    margin-top: 4rem;
+}  
+
+.text{
+    gap: 1rem;
+}
+
+h1{
+    font-size: 5rem;
+}
+
+h2{
+    font-size: 3rem;
+}
+h3{
+    font-size: 2rem;
+}
 }
