--- a/style.css
+++ b/style.css
@@ -179,6 +179,22 @@ input {
     border-style: none; */
 }
 
+.coverInput{
+   
+    width: 2rem;
+    height: 2rem;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: auto;
+    top: auto;
+    background-color: #36a188;
+    z-index: 10;
+    opacity: 0.5;
+    border-radius: 0.1rem;
+    border: 1px solid #2d3e3a;
+    pointer-events: none;
+}
 
 
 
